--- a/conf/params.xml.template
+++ b/conf/params.xml.template
@@ -2,7 +2,7 @@
 <wiff version="0.0.1" release="1" author="anakeen, www.anakeen.com" license="GPL2" lang="fr|en">
 
   <repositories>
-	<access name="repository-installer" description="Online Repository Installer" baseurl="http://ftp.freedom-ecm.org/frdom/wiff/webinst/test" />
+	<access name="freedom-test" description="Freedom Test (2.13)" baseurl="http://ftp.freedom-ecm.org/frdom/webinst/test" />
   </repositories>
 
   <parameters>
