--- a/conf/params.xml.template
+++ b/conf/params.xml.template
@@ -3,7 +3,7 @@
 
   <repositories>
 	<access name="freedom" description="freedom 3.0" protocol="http" host="ftp.freedom-ecm.org" path="3.0/webinst/" authentified="no" login="" password="" default="yes" />
-	<access name="third-party" description="freedom 3.0 third-party modules" protocol="http" host="ftp.freedom-ecm.org" path="3.0/third-party/webinst/" authenticated="no" login="" password="" default="yes" />
+	<access name="third-party" description="third-party modules" protocol="http" host="ftp.freedom-ecm.org" path="third-party/webinst/" authenticated="no" login="" password="" default="yes" />
   </repositories>
 
   <parameters>
