--- a/conf/params.xml.template
+++ b/conf/params.xml.template
@@ -2,8 +2,8 @@
 <wiff version="0.0.1" release="1" author="anakeen, www.anakeen.com" license="AGPL3" lang="fr|en">
 
   <repositories>
-    <access name="dynacase_stable" description="Dynacase stable release" protocol="http" host="ftp.dynacase.org" path="stable/webinst/" authenticated="no" login="" password="" default="yes" />
-    <access name="dynacase_third_party" description="Dynacase third-party modules" protocol="http" host="ftp.dynacase.org" path="third-party/webinst/" authenticated="no" login="" password="" default="yes" />
+    <access name="dynacase" description="Dynacase" protocol="http" host="eec.anakeen.com" path="public/platform/" authenticated="no" login="" password="" default="yes" />
+    <access name="dynacase_third_party" description="Dynacase third-party modules" protocol="http" host="eec.anakeen.com" path="public/third-party/" authenticated="no" login="" password="" default="yes" />
   </repositories>
 
   <parameters>
